--- a/.github/workflows/build_and_push_to_docker.yml
+++ b/.github/workflows/build_and_push_to_docker.yml
@@ -38,7 +38,7 @@ jobs:
       matrix:
         EXTENSIONS:
           - cuda9.2
-          - cuda10.0-tf1.14
+          - cuda10.0-tf
           - julia1.3.1
 
     steps:
