chore: update cuda

--- a/.github/workflows/build_and_push_to_docker.yml
+++ b/.github/workflows/build_and_push_to_docker.yml
@@ -45,7 +45,7 @@ jobs:
       matrix:
         EXTENSIONS:
           - cuda9.2
-          - cuda10.0-tf
+          - cuda-tf
           - julia1.3.1
 
     steps:
